<resources>
    <string name="app_name">Daily News</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error.\nCould get data, please try again!</string>
    <string name="too_many_request">Too Many Requests. You made too many requests within a window of time and have been rate limited</string>
    <string name="too_many_request_100">You have requested too many results. Developer accounts are limited to a max of 100 results</string>
    <string name="something_error">Something went wrong!</string>
    <string name="title">Title</string>
    <string name="select_your_favorite_section">Select Your\nFavorite Section.</string>
    <string name="health">Health</string>
    <string name="daily_news">Daily News</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="indonesia">Indonesia</string>
    <string name="please_wait">Please Wait</string>
    <string name="news_sources">News Sources</string>
    <string name="sources">Sources</string>
    <string name="time">Time</string>
    <string name="search_transition_name">transition_reveal</string>
    <string name="no_result">No Result</string>
    <string name="transition">transition</string>
    <string name="transition_article">transition_article</string>
    <string name="article">Article</string>
</resources>