<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/mainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:transitionName="@string/transition_article"
    app:cardBackgroundColor="@color/colorBgSource2"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    app:contentPadding="10dp"
    app:cardCornerRadius="10dp"
    android:layout_margin="5dp"
    app:cardUseCompatPadding="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            android:layout_marginRight="20dp"
            app:cardUseCompatPadding="false">
            <TextView
                android:id="@+id/tvSourceIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="A"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="24dp"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvSourceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlue"
                android:gravity="left"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginBottom="3dp"
                android:text="@string/health"/>
            <TextView
                android:id="@+id/tvSourceSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayText"
                android:gravity="left"
                android:textSize="12sp"
                android:layout_marginBottom="3dp"
                android:text="@string/health"/>
            <TextView
                android:id="@+id/tvSourceCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorGrayText"
                android:gravity="left"
                android:textSize="12sp"
                android:text="@string/indonesia"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>