<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <com.classic.common.MultipleStatusView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:loadingView="@layout/layout_loading_view"
        app:noNetworkView="@layout/layout_network_view"
        app:errorView="@layout/layout_error_view"
        app:emptyView="@layout/layout_empty_view">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/colorSourceHeader"
                    android:textStyle="bold"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sources"/>
                <TextView
                    android:id="@+id/tvSubHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/colorSourceSubHeader"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/categories"/>
                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/colorGray2"
                    app:contentPadding="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_search"
                            app:tint="@color/colorGrayText" />
                        <EditText
                            android:id="@+id/etSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:inputType="text"
                            android:hint="@string/search"
                            android:padding="5dp"
                            android:gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorGrayText"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/reviSources"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.classic.common.MultipleStatusView>
</LinearLayout>