<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite2">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/daily_news"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/ivSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:visibility="gone"
                android:transitionName="@string/search_transition_name"
                tools:src="@drawable/ic_search"
                tools:targetApi="lollipop" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:background="@color/colorGray"/>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/colorGray2"
                    app:contentPadding="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_marginRight="5dp"
                            android:src="@drawable/ic_search"
                            app:tint="@color/colorGrayText" />
                        <EditText
                            android:id="@+id/etSearch"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:inputType="text"
                            android:hint="@string/search"
                            android:padding="5dp"
                            android:imeOptions="actionSearch"
                            android:gravity="center_vertical"
                            android:background="@android:color/transparent"
                            android:textColor="@color/colorGrayText"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <com.classic.common.MultipleStatusView
                    android:id="@+id/statusView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:loadingView="@layout/layout_loading_view"
                    app:noNetworkView="@layout/layout_network_view"
                    app:errorView="@layout/layout_error_view"
                    app:emptyView="@layout/layout_empty_view">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/reviArticles"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>
                </com.classic.common.MultipleStatusView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
</LinearLayout>